# GMU

./: .gitignore  LICENSE  README.md  deploy.sh  gmu.service  pyproject.toml  shell.nix
docs/: Bedienungsanleitung.md  Einrichtungsanleitung.md  PAP-v1.6.drawio  PAP.drawio  analyse-und-steuerung.md
examples/: IR.py  blinking_led.py  button_buzzer.py  button_matrix.py  buzzer.py  dht_11.py  distance.py  lcd.py  lcd_joy-it.py  light_sensor.py  matrix_demo.py  matrix_joy-it.py  motion.py  relay.py  segment.py  servo.py  sound.py  stepmotor.py  tilt.py  touch.py  vibration.py
examples/Extensions/: adc.py  bmp.py  joystick.py  magnet.py  poti.py
src/: gmu.py  gwh.py  main.py  output.py  sensors.py
src/gmu/: gmu.py  output.py
